package cn.nju.game.equip;
/**
 * 武器
 */
public abstract class Weapon {

    /**
     * Default constructor
     */
    public Weapon() {
    }

    /**
     * 武器名
     */
    public String name;

}